<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@android:color/background_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Activity.UpdateUsuarioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#F7F7F7"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_margin="20dp">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editar"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:ems="10"
            android:paddingBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="90dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:text="@string/usuario"
                android:textColor="@color/colorAccent" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editUsuario"
                android:textColor="@android:color/holo_blue_dark"
                android:inputType="text"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="90dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:text="@string/clave"
                android:textColor="@color/colorAccent" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editClave"
                android:textColor="@android:color/holo_blue_dark"
                android:inputType="text"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="90dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:text="@string/confclave"
                android:textColor="@color/colorAccent" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editConfClave"
                android:textColor="@android:color/holo_blue_dark"
                android:inputType="text"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tw_usuario"
                android:layout_width="90dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:text="@string/idpersona"
                android:textColor="@color/colorAccent" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editPersona" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="90dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:ems="20"
                android:text="@string/rolpalabra"
                android:textColor="@color/colorAccent" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_Rol" />




        </LinearLayout>




        <Button
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_editar_usuario"
            android:text="@string/guardar"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"

            />

        <Button
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_eliminar_usuario"
            android:text="@string/eliminar"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_red_dark"

            />


    </LinearLayout>
    <TextView
        android:id="@+id/etaidpersona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:visibility="invisible"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/etaidrol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:visibility="invisible"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white" />
    <TextView
        android:id="@+id/etActivityPersona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white" />
    <TextView
        android:id="@+id/etActivityRol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:visibility="invisible"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white" />

</LinearLayout>